--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Igar's Page</title>
+    <meta name="og:title" content="Igar's Page" />
+    <meta name="og:description" content="What?" />
+    <meta name="og:url" content="https://igarramaddhan.now.sh" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="What?" />
+    <meta name="twitter:title" content="Igar's Page" />
+    <meta name="twitter:site" content="@igarramaddhan" />
+    <meta name="twitter:creator" content="@igarramaddhan" />
   </head>
   <body>
     <div id="root"></div>
